Funcionalidad de Suma

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Bienvendio al Workshop</h1>
     <input id="num1" placeholder="Numero 1">
     <input id="num2" placeholder="Numero 2">
+    <button onclick="operaciones('sumar')">Sumar</button>
 </body>
   <script>
       const operaciones = (accion) =>{
