Funcionalidad de Suma

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
           switch(accion){
               default:
+              alert('El resultado de la suma es:'+(num1+num2))
           }
       }
   </script>
