--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Bienvendio al Workshop</h1>
     <input id="num1" placeholder="Numero 1">
     <input id="num2" placeholder="Numero 2">
+    <button onclick="operaciones('multiplicacion')">Multiplicacion</button>
 </body>
   <script>
       const operaciones = (accion) =>{
@@ -16,7 +17,10 @@
           const num2= parseInt(document.getElementById('num2').value);
 
           switch(accion){
-              default:
+              case 'multiplicacion':
+               alert('El resultado de la multi es:'+(num1*num2))
+              break;
+            default:
           }
       }
   </script>
