Union de Multiplicacion

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           switch(accion){
               default:
               alert('El resultado de la suma es:'+(num1+num2))
+              break;
           
               case 'Restar':
               alert('El resultado de la resta es:'+(num1-num2))
